--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.4cc6d5b988.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.a9d15ce0a4.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -29,9 +29,12 @@
       <a name="top"></a>
       <h1 class="title is-size-1 is-size-2-mobile">FAQ</h1>
       <p>
-        Microsponsors.io is a new kind of peer-to-peer marketplace. It is important to know that this is experimental software. You are responsible for understanding how it works, so keep reading!
+        Microsponsors.io is a new kind of peer-to-peer sponsorship marketplace. It is important to know that this is experimental software. You are responsible for understanding how it works, so keep reading!
       </p>
-      <p>
+
+      <p class="ms-faq-contents">
+
+        <span class="heading">Get started</span>
         <a href="#intro" class="is-block ms-external-link">
          ▾ How does this work?
         </a>
@@ -44,6 +47,8 @@
         <a href="#why-register" class="is-block ms-external-link">
           ▾ Why do I need to register?
         </a>
+
+        <span class="heading">Tokens &amp Auctions</span>
         <a href="#what-is-mspt" class="is-block ms-external-link">
           ▾ What is a time slot token?
         </a>
@@ -71,25 +76,31 @@
         <a href="#refunds" class="is-block ms-external-link">
           ▾ How do I get a refund?
         </a>
+
+        <span class="heading">Earn Extra $$</span>
         <a href="#how-can-i-earn-with-referrals" class="is-block ms-external-link">
           ▾ How can I earn money with Referrals?
         </a>
         <a href="#how-can-i-earn-with-0x" class="is-block ms-external-link">
           ▾ How can I earn money with the 0x Protocol (ZRX)?
         </a>
+
+        <span class="heading">Governance &amp; Feedback</span>
         <a href="#plan-to-decentralize" class="is-block ms-external-link">
           ▾ How do you plan to decentralize?
         </a>
         <a href="#feedback" class="is-block ms-external-link">
           ▾ How can I send feedback?
         </a>
-        <br />
+
+        <span class="heading">For Devs</span>
         <a href="#devs-smart-contracts" class="is-block ms-external-link">
           ▾ For developers: Where can I find your smart contracts?
         </a>
         <a href="#devs-build" class="is-block ms-external-link">
           ▾ For developers: How can I build on top of Microsponsors?
         </a>
+
       </p>
 
       <a name="intro"></a>
@@ -97,15 +108,15 @@
         How does this work?
       </h3>
       <p><em>
-        This website is essentially a bulletin board that allows people to transact with one another directly with no middleman, using digital tokens on the Ethereum blockchain.
+        This website is essentially a bulletin board that allows Publishers/Creators &amp; their Sponsors to transact with each another directly using digital tokens on the Ethereum blockchain.
       </em></p>
       <p>
-        Microsponsors "MSPT" tokens represent time slots. You can easily create and auction them using this website. They are compatible with the ERC-721 token standard (also known as "Non-Fungible Tokens")</a>.
+        Microsponsors "MSPT" tokens represent time slots in websites, newsletters and podcasts that Sponsors can buy. Creators can easily create ("mint") and auction these tokens using this website. These tokens are compatible with the ERC-721 token standard (also known as "Non-Fungible Tokens")</a>.
       </p>
       <p>
-        All of the data for Account Registration, the MSPT time slots and their transfer restrictions live on the Ethereum blockchain and are free and open to all to explore and build upon.
+        All of the data for Account Registration, the MSPT time slots and their transfer restrictions live on the public Ethereum blockchain and are free and open to all to explore and build upon.
       </p>
-      <p>Watch our <a href="https://www.youtube.com/watch?v=I0vQAFoWmDY" target="_blank">"How this works"</a> video on YouTube.</p>
+      <p>Check out our short <a href="https://www.youtube.com/watch?v=I0vQAFoWmDY" target="_blank">"How it works"</a> video on YouTube (< 2 minutes).</p>
 
       <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
 
@@ -405,6 +416,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: master
-git sha: a7c06c0e1fd4064b4e91f749925fac1003167edb
+git branch: homepage
+git sha: d7997347f18b39652e17d6456426a7020496476b
  -->
