--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.4cc6d5b988.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.a9d15ce0a4.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -18,28 +18,20 @@
   <body class="ms-body ms-body--index">
 
     <section class="hero hero--homepage-top">
+
       <div class="navbar-menu ms-navbar-menu">
         <div class="navbar-end">
-          <a href="https://discord.gg/j58SaNe" class="navbar-item"
-            target="_blank">
-            <i class="fab fa-discord"></i>
+          <a href="faq.html" class="navbar-item is-size-6">
+            FAQ
           </a>
-          <a href="https://youtube.com/channel/UCiPe9lNDUEt6suxL1n7CJ9A/" class="navbar-item" target="_blank">
-            <i class="fab fa-youtube"></i>
-          </a>
-          <a href="https://twitter.com/microsponsors" class="navbar-item"
-            target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://medium.com/@microsponsors" class="navbar-item"
-            target="_blank">
-            <i class="fab fa-medium-m"></i>
-          </a>
-          <a href="https://github.com/microsponsors" class="navbar-item" target="_blank">
-            <i class="fab fa-github"></i>
+          <a href="javascript: void(0);"
+            class="navbar-item is-size-6"
+            id="ms-btn-contact">
+            Contact
           </a>
         </div>
       </div>
+
       <div class="hero-body">
         <div class="container">
           <div class="ms-logo-container">
@@ -49,7 +41,7 @@
           </div>
         </div> <!-- /.container -->
         <div class="container">
-          <h1 class="title is-2 is-size-5-mobile">
+          <h1 class="title is-2 is-size-4-mobile">
             Time is your greatest asset.
           </h1>
           <h2 class="title is-4 is-size-7-mobile">
@@ -86,10 +78,10 @@
                 &nbsp;<i class="fas fa-chevron-right"></i>
               </a>
               <div class="ms-quickstart__links is-5 is-size-7-mobile">
-                Manage:
+                Returning users:
                 <br />
                 <a href="exchange.html?view=auctions&sort=auctionsofusercurrent">
-                  Your auctions &rarr;
+                  Manage your auctions &rarr;
                 </a>
               </div>
             </div>
@@ -98,17 +90,29 @@
         </div> <!-- /.container -->
 
         <div class="container ms-container--howthisworks">
-          <p class="is-5 is-size-7-mobile">How this works</p>
+          <p class="is-5 is-size-7-mobile">How this works:</p>
           <a href="javascript: void(0);"
-            class="button is-primary is-inverse is-icon-only"
-                id="ms-btn-more-details">
-                <i class="fas fa-chevron-down"></i>
-              </a>
+            class="button is-primary is-icon-only"
+            id="ms-btn-more-details">
+              <i class="fas fa-chevron-down"></i>
+            </a>
         </div>
       </div> <!-- /.hero-body -->
     </section> <!-- /.hero -->
 
     <section class="section homepage-details" id="ms-homepage-details">
+
+      <div class="container ms-padding-top">
+          <h3 class="title is-3 is-size-4-mobile">
+            Reach niche audiences with sponsorships.
+          </h3>
+          <h4 class="title is-5 is-size-6-mobile">
+            Sponsored content is perfect for reaching savvy, niche audiences who care about privacy and don't want to be tracked.
+          </h4>
+          <h4 class="title is-5 is-size-6-mobile">
+            Our time slots represent scheduled contextual advertising in websites, newsletters and podcasts.
+          </h4>
+        </div> <!-- /.container -->
 
       <div class="homepage-details__howthisworks">
         <div class="ms-full">
@@ -119,96 +123,71 @@
       </div>
 
       <div class="container">
-        <!--
-        <h3 class="title is-4 is-size-5-mobile ms-categories-title">
-          browse categories:
-        </h3>
-        <div class="columns homepage-details__categories">
-          <div class="column is-6" >
-            <a href="exchange.html?view=auctions&sort=category-podcast" class="ms-alt-link is-5 is-size-6-mobile">Podcasts</a>
-            <a href="exchange.html?view=auctions&sort=category-social%20media" class="ms-alt-link is-5 is-size-6-mobile">Social Media (Influencers)</a>
-            <a href="exchange.html?view=auctions&sort=category-video" class="ms-alt-link is-5 is-size-6-mobile">Videos/ Livestreams</a>
-            <a href="exchange.html?view=auctions&sort=category-websites" class="ms-alt-link is-5 is-size-6-mobile">Websites</a>
-            <a href="exchange.html?view=auctions&sort=category-game" class="ms-alt-link is-5 is-size-6-mobile">Games</a>
-            <a href="exchange.html?view=auctions&sort=category-event" class="ms-alt-link is-5 is-size-6-mobile">Events</a>
-          </div>
-          <div class="column is-6" >
-            <a href="exchange.html?view=auctions&sort=category-freelancing" class="ms-alt-link is-5 is-size-6-mobile">Freelancing</a>
-            <a href="exchange.html?view=auctions&sort=category-software%20development" class="ms-alt-link is-5 is-size-6-mobile">Software Development</a>
-            <a href="exchange.html?view=auctions&sort=category-art" class="ms-alt-link is-5 is-size-6-mobile">Art</a>
-            <a href="exchange.html?view=auctions&sort=category-newsletter" class="ms-alt-link is-5 is-size-6-mobile">Newsletters</a>
-            <a href="exchange.html?view=auctions&sort=category-publications" class="ms-alt-link is-5 is-size-6-mobile">Publications</a>
-            <a href="exchange.html?view=auctions&sort=category-charity" class="ms-alt-link is-5 is-size-6-mobile">Charity/ Fundraisers</a>
-          </div>
-        </div>
-        -->
         <div class="homepage-details__detail">
           <div class="detail-icon detail-icon__p2p"></div>
-          <h3 class="title is-4 is-size-6-mobile">Peer-to-Peer</h3>
+          <h3 class="title is-4 is-size-5-mobile">Peer-to-Peer</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">Bidding is decentralized. Nobody can interfere in bidding in any way.</li>
-            <li class="is-5 is-size-7-mobile">In other words: No middlemen! Microsponsors is basically a bulletin board with built-in auctions.</li>
-            <li class="is-5 is-size-7-mobile">When Creators choose a winning bid, tokens are traded directly wallet-to-wallet using the <a href="https://0x.org" target="_blank">0x Decentralized Exchange Protocol</a> on the public Ethereum blockchain.</li>
-          </ul>
-        </div>
-
-        <div class="homepage-details__detail">
-          <div class="detail-icon detail-icon__fees"></div>
-          <h3 class="title is-4 is-size-6-mobile">Lower Fees</h3>
-          <ul>
-            <li class="is-5 is-size-7-mobile">Creators: no fee for registration.</li>
-            <li class="is-5 is-size-7-mobile">Sponsors: no fee for bidding.</li>
-            <li class="is-5 is-size-7-mobile">When a bid is accepted by a seller and the auction is over, Microsponsors charges a fee of 1.5% to each side.</li>
-            <li class="is-5 is-size-7-mobile">Using the Ethereum blockchain for payments means lower fees. Especially for cross-border
-            payments.</li>
-          </ul>
-        </div>
-
-        <div class="homepage-details__detail">
-          <div class="detail-icon detail-icon__instant"></div>
-          <h3 class="title is-4 is-size-6-mobile">Instant Payouts</h3>
-          <ul>
-            <li class="is-5 is-size-7-mobile">Instant transaction settlement. No waiting around!</li>
-           <li class="is-5 is-size-7-mobile">Participants are able to cash-out their earnings any time.</li>
-            <li class="is-5 is-size-7-mobile">Our Referral program will help you earn even more by bringing your friends along (arrival date TBD).</li>
-          </ul>
-        </div>
-
-        <div class="homepage-details__detail">
-          <div class="detail-icon detail-icon__fair"></div>
-          <h3 class="title is-4 is-size-6-mobile">Fair Marketplace</h3>
-          <ul>
-            <li class="is-5 is-size-7-mobile">Our mission is to deliver top-tier monetization solutions on a level playing field for businesses and individuals alike, no matter the size.</li>
-            <li class="is-5 is-size-7-mobile">Microsponsors is a fair, neutral marketplace that helps eliminate waste, fraud and deceptive practices.</li>
-            <li class="is-5 is-size-7-mobile">Microsponsors will not compete against its own market's participants. Your business is yours.</li>
+            <li class="is-size-6 is-size-6-mobile">Microsponsors is basically a bulletin board where Publishers &amp; Creators can transact with Sponsors &amp; Media Buyers directly.</li>
+            <li class="is-size-6 is-size-6-mobile">When a Creator chooses a winning Sponsor, trades happen wallet-to-wallet on the public Ethereum blockchain.</li>
+            <li class="is-size-6 is-size-6-mobile">Bidding is decentralized. Nobody can interfere in your auctions.</li>
           </ul>
         </div>
 
         <div class="homepage-details__detail">
           <div class="detail-icon detail-icon__transparent"></div>
-          <h3 class="title is-4 is-size-6-mobile">Transparent</h3>
+          <h3 class="title is-4 is-size-5-mobile">Transparent</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">Transparent, verifiable auctions help Buyers get the best Return on Investment, and helps Creators
-            get the right price.</li>
-            <li class="is-5 is-size-7-mobile">No hidden fees or deceptive pricing. Fees are clear as you use our Exchange and are detailed in the <a href="faq.html">FAQ</a>.</li>
+            <li class="is-size-6 is-size-6-mobile">Transparent, verifiable auctions help Sponsors get the best ROI, and Creators &amp; Publishers get the right price.</li>
+            <li class="is-size-6 is-size-6-mobile">No hidden fees or deceptive pricing. Fees are clear as you use our Exchange and are detailed in the <a href="faq.html">FAQ</a>.</li>
+          </ul>
+        </div>
+
+        <div class="homepage-details__detail">
+          <div class="detail-icon detail-icon__fees"></div>
+          <h3 class="title is-4 is-size-5-mobile">Low Fees</h3>
+          <ul>
+            <li class="is-size-6 is-size-6-mobile">Creators &amp; Publishers: no fee for registration.</li>
+            <li class="is-size-6 is-size-6-mobile">Sponsors: no fee for bidding.</li>
+            <li class="is-size-6 is-size-6-mobile">When a bid is selected by the seller, Microsponsors charges a fee of 1.5% to each side.</li>
+            <li class="is-size-6 is-size-6-mobile">Using Ethereum means lower fees. Especially for cross-border payments.</li>
+          </ul>
+        </div>
+
+        <div class="homepage-details__detail">
+          <div class="detail-icon detail-icon__instant"></div>
+          <h3 class="title is-4 is-size-5-mobile">Instant Payouts</h3>
+          <ul>
+            <li class="is-size-6 is-size-6-mobile">Instant transaction settlement. No waiting around!</li>
+           <li class="is-size-6 is-size-6-mobile">Participants are able to cash-out their earnings any time.</li>
+            <li class="is-size-6 is-size-6-mobile">Our Referral program will help you earn even more by bringing your friends along (start date TBD).</li>
+          </ul>
+        </div>
+
+        <div class="homepage-details__detail">
+          <div class="detail-icon detail-icon__fair"></div>
+          <h3 class="title is-4 is-size-5-mobile">Fair Marketplace</h3>
+          <ul>
+            <li class="is-size-6 is-size-6-mobile">Our mission is to deliver top-tier monetization solutions on a level playing field for businesses and individuals alike, no matter the size.</li>
+            <li class="is-size-6 is-size-6-mobile">Microsponsors is a fair, neutral marketplace that helps eliminate waste, fraud and deceptive practices.</li>
+            <li class="is-size-6 is-size-6-mobile">Microsponsors will not compete against its own market's participants. Your business is yours.</li>
           </ul>
         </div>
 
         <div class="homepage-details__detail">
           <div class="detail-icon detail-icon__tamper"></div>
-          <h3 class="title is-4 is-size-6-mobile">Tamper-Proof</h3>
+          <h3 class="title is-4 is-size-5-mobile">Tamper-Proof</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">Creators are digitally verified with a tamper-proof blockchain Registry.</li>
-            <li class="is-5 is-size-7-mobile">Auction bids are secured with cryptographic signature tools.</li>
+            <li class="is-size-6 is-size-6-mobile">Publishers and Creators are digitally verified with a tamper-proof blockchain Registry.</li>
+            <li class="is-size-6 is-size-6-mobile">Auction bids are secured with cryptographic signature tools.</li>
           </ul>
         </div>
 
         <div class="homepage-details__detail">
           <div class="detail-icon detail-icon__0x"></div>
-          <h3 class="title is-4 is-size-6-mobile">0x Ecosystem</h3>
+          <h3 class="title is-4 is-size-5-mobile">0x Ecosystem</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">Proud grantee of the <a href="https://blog.0xproject.com/announcing-the-0x-ecosystem-acceleration-program-89d1cb89d565" target="_blank">0x.org Ecosystem Accelerator Program</a>. Built on top of the Ethereum blockchain, 0x is dedicated to the free flow of value on the internet.</li>
-            <li class="is-5 is-size-7-mobile">The 0x roadmap will allow Microsponsors to scale in new and innovative ways.
+            <li class="is-size-6 is-size-6-mobile">Proud grantee of the <a href="https://blog.0xproject.com/announcing-the-0x-ecosystem-acceleration-program-89d1cb89d565" target="_blank">0x.org Ecosystem Accelerator Program</a>. Built on the Ethereum blockchain, 0x is dedicated to the free flow of value on the internet.</li>
+            <li class="is-size-6 is-size-6-mobile">The 0x roadmap will allow Microsponsors to scale in new and innovative ways.
           </ul>
         </div>
 
@@ -300,17 +279,9 @@
         var $contentType = $('#ms-hero-content-type');
         var contentTypeArray = [
           'website.',
-          'freelancing.',
-          'videos.',
-          'game.',
           'newsletter.',
-          'event.',
-          'fundraiser.',
-          'livestream.',
-          'art.',
-          'services.',
           'podcast.',
-          ' ...what else?'
+          'videos.',
         ];
         var counter = 0;
         var counterMax = contentTypeArray.length - 1;
@@ -326,14 +297,24 @@
           }, 1000);
         }, 1000);
 
-        // Buttons + Scrolling for "How it works"
+        // Button + Scrolling for "How it works"
         var $btnMoreDetails = $('#ms-btn-more-details');
-        var $homepageDetails = $('#ms-homepage-details')
+        var $homepageDetails = $('#ms-homepage-details');
 
         $btnMoreDetails.click(function (e) {
           e.preventDefault();
           animateScroll($homepageDetails);
         });
+
+        // Button + Scrolling for "Contact"
+        var $btnContact = $('#ms-btn-contact');
+        var $homepageFooter = $('#ms-footer');
+
+        $btnContact.click(function (e) {
+          e.preventDefault();
+          animateScroll($homepageFooter);
+        });
+
 
         function animateScroll($el) {
           $html.animate({
@@ -349,6 +330,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: master
-git sha: a7c06c0e1fd4064b4e91f749925fac1003167edb
+git branch: homepage
+git sha: d7997347f18b39652e17d6456426a7020496476b
  -->
