--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.a9d15ce0a4.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.2073a45f73.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -29,7 +29,7 @@
       <a name="top"></a>
       <h1 class="title is-size-1 is-size-2-mobile">FAQ</h1>
       <p>
-        Microsponsors.io is a new kind of peer-to-peer sponsorship marketplace. It is important to know that this is experimental software. You are responsible for understanding how it works, so keep reading!
+        Microsponsors.io is a new kind of peer-to-peer marketplace for sponsored content. It is important to know that this is experimental software. You are responsible for understanding how it works, so keep reading!
       </p>
 
       <p class="ms-faq-contents">
@@ -108,10 +108,10 @@
         How does this work?
       </h3>
       <p><em>
-        This website is essentially a bulletin board that allows Publishers/Creators &amp; their Sponsors to transact with each another directly using digital tokens on the Ethereum blockchain.
+        Microsponsors is essentially a bulletin board that helps Publishers and Creators sell sponsored content as time slots.
       </em></p>
       <p>
-        Microsponsors "MSPT" tokens represent time slots in websites, newsletters and podcasts that Sponsors can buy. Creators can easily create ("mint") and auction these tokens using this website. These tokens are compatible with the ERC-721 token standard (also known as "Non-Fungible Tokens")</a>.
+        Microsponsors "MSPT" tokens represent time slots in websites, newsletters and podcasts that Sponsors can buy. Creators can easily create ("mint") and auction these time slot tokens on the public Ethereum blockchain using the tools provided by this website. These tokens are compatible with the ERC-721 token standard (also known as "Non-Fungible Tokens")</a>.
       </p>
       <p>
         All of the data for Account Registration, the MSPT time slots and their transfer restrictions live on the public Ethereum blockchain and are free and open to all to explore and build upon.
@@ -251,9 +251,9 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         How do I get a refund?
       </h3>
-      <p>When you transact with sellers on this website there is no middleman. Microsponsors' website is simply a bulletin board that faciliates auctions and trading (kind of like Craigslist, but with auctions built in).
+      <p>When you transact with sellers on this website there is no central entity in the middle. Microsponsors' website is simply a bulletin board that faciliates auctions and trading (kind of like Craigslist, but with auctions built in). Because there is no central entity between the buyer and the seller, fees are very low. It also means that there is no way for Microsponsors to issue refunds.
       </p>
-      <p>This means there is no central entity between the buyer and the seller. This means fees are very low. It also means that there is no way for Microsponsors to issue refunds. Refunds must be negotiated between buyer and seller directly. Each token has a "Comments" feature you can use for communicating directly with one another and keeping a record of what was agreed upon. The comments section for each token is written to IPFS via <a href="https://3Box.io" target="_blank">3Box.io</a> and cannot be edited or deleted.
+      <p>Refunds must be negotiated between buyer and seller directly. Each token has a "Comments" feature you can use for communicating directly with one another and keeping a record of what was agreed upon. The comments section for each token is written to IPFS via <a href="https://3Box.io" target="_blank">3Box.io</a> and cannot be edited or deleted.
       </p>
 
       <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
@@ -262,15 +262,8 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         How can I earn money with Referrals?
       </h3>
-      <p>The referral program is designed to incentivize users to bring their network along and to help them get registered and transacting on this website as quickly as possible.
+      <p>Any registered account may refer their friends and colleagues to Microsponsors using the "Share Links" in your profile page, auction listings or in the Registry. Start building up your Referrals now and when we rollout the program (date TBD) you will be rewarded as the community grows!
       </p>
-      <p>Any registered account may refer their friends and colleagues to Microsponsors using any of the "Share Links" in the auction listings or in the Registry.
-      </p>
-      <p>
-      We are currently waiting on the 0x Protocol to implement the type of fee splitting that will support our Referral program. For now, when your friends register using your Referral link, we will record it on the blockchain. And when 0x fee-splitting is ready, we will update our integration and you will begin to collect your Referral fees.
-      </p>
-      <p>Once it is fully implemented, Referral Fees will be paid directly to the Referrer's Ethereum account at the time of sale using the 0x Protocol (no waiting around). These Referral Fees will only apply to auctions on this website. Other venues may choose to implement their own referral programs, or none at all.</p>
-      <p>We reserve the right to change the rules of the referral program at any time to incentivize new/ different behaviors as things evolve.</p>
 
       <a href="#top" class="is-block ms-external-link is-size-6 is-size-6-mobile" style="margin-left: 20px;">↑ TOP</a>
 
@@ -289,7 +282,7 @@
       <h3 class="title is-5 is-size-6-mobile ms-title__q">
         How do you plan to decentralize?
       </h3>
-      <p>In terms of ownership and governance, the most resilient strategy for the long term is to create a large and diverse coalition of stakeholders who share ownership. In the interest of integrity, we're going to work towards product-market fit and building community first, and then (probably) tokenize ownership. Join our <a href="https://discord.gg/j58SaNe">Discord</a> if you're interested.
+      <p>In terms of ownership and governance, the most resilient strategy for the long term is to create a large and diverse coalition of stakeholders who share ownership. In the interest of integrity, we're going to work towards product-market fit and building community first. Join our <a href="https://discord.gg/j58SaNe">Discord</a> if you're interested.
       </p>
       <p>Microsponsors MSPT tokens have been designed to Federate with other organizations who wish to run their own Registries with their own desired rules and set(s) of participants. Please get in touch if you think your organization is a good fit. Email hello [at] microsponsors.io
       </p>
@@ -416,6 +409,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: homepage
-git sha: d7997347f18b39652e17d6456426a7020496476b
+git branch: master
+git sha: 0095f119b45d582d1bb51b0d3fbdec33d067d814
  -->
