--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.a9d15ce0a4.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.2073a45f73.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -41,12 +41,12 @@
           </div>
         </div> <!-- /.container -->
         <div class="container">
-          <h1 class="title is-2 is-size-4-mobile">
+          <h1 class="title is-1 is-size-2-mobile">
             Time is your greatest asset.
           </h1>
-          <h2 class="title is-4 is-size-7-mobile">
-            Create + auction time slots for your
-            <span id="ms-hero-content-type">podcast.</span>
+          <h2 class="title is-4 is-size-5-mobile">
+            Buy + sell time slots in
+            <span id="ms-hero-content-type">websites.</span>
           </h2>
         </div> <!-- /.container -->
 
@@ -55,10 +55,12 @@
           <div class="columns">
 
             <div class="ms-quickstart__sponsors column is-5">
-              <h3 class="ms-quickstart__heading">I am a Sponsor:</h3>
+              <h3 class="ms-quickstart__heading">
+                I want to sponsor content:
+              </h3>
               <a href="exchange.html"
                 class="button is-primary is-medium is-blue is-emphasized">
-                Browse &amp; Buy
+                Browse &amp; Buy Time Slots
                 &nbsp;<i class="fas fa-chevron-right"></i>
               </a>
               <div class="ms-quickstart__links is-5 is-size-7-mobile">
@@ -74,7 +76,7 @@
               <h3 class="ms-quickstart__heading">I am a Creator:</h3>
               <a href="exchange.html?view=registry"
                 class="button is-primary is-green is-medium is-emphasized">
-                Register
+                Register to Begin
                 &nbsp;<i class="fas fa-chevron-right"></i>
               </a>
               <div class="ms-quickstart__links is-5 is-size-7-mobile">
@@ -102,20 +104,45 @@
 
     <section class="section homepage-details" id="ms-homepage-details">
 
-      <div class="container ms-padding-top">
+      <div class="container ms-padding-top ms-shifted-left">
+
+          <div class="detail-icon detail-icon__niche"></div>
           <h3 class="title is-3 is-size-4-mobile">
-            Reach niche audiences with sponsorships.
+            Reach niche audiences with sponsored content.
           </h3>
           <h4 class="title is-5 is-size-6-mobile">
-            Sponsored content is perfect for reaching savvy, niche audiences who care about privacy and don't want to be tracked.
+            Perfect for reaching savvy, niche audiences who care about privacy and don't want to be tracked.
           </h4>
           <h4 class="title is-5 is-size-6-mobile">
-            Our time slots represent scheduled contextual advertising in websites, newsletters and podcasts.
+            Our time slots represent <span>scheduled contextual ads</span> in websites, newsletters, podcasts and videos.
           </h4>
-        </div> <!-- /.container -->
+
+
+      </div> <!-- /.container -->
+
+      <div class="container ms-padding-top ms-shifted-right">
+
+          <div class="detail-icon detail-icon__p2p"></div>
+          <h3 class="title is-3 is-size-4-mobile">
+            Peer-to-peer marketplace.
+          </h3>
+          <h4 class="title is-5 is-size-6-mobile">
+            Creators + Sponsors/Media Buyers transact directly, wallet-to-wallet on the public Ethereum blockchain.
+          </h4>
+          <h4 class="title is-5 is-size-6-mobile">
+            Bidding is decentralized. Nobody can interfere in auctions.
+          </h4>
+
+      </div> <!-- /.container -->
 
       <div class="homepage-details__howthisworks">
-        <div class="ms-full">
+        <div class="ms-full is-centered">
+          <p class="heading">
+            <span class="is-block">Watch our 2 minute video:</span>
+            <a href="https://www.youtube.com/watch?v=I0vQAFoWmDY" target="_blank" class="is-size-5 is-size-6-mobile">
+              How Microsponsors Works
+            </a>
+          </p>
           <a href="https://www.youtube.com/watch?v=I0vQAFoWmDY" target="_blank">
             <img src="static/img/how-it-works-youtube2.png" alt="how it works video on youtube" />
           </a>
@@ -123,31 +150,13 @@
       </div>
 
       <div class="container">
-        <div class="homepage-details__detail">
-          <div class="detail-icon detail-icon__p2p"></div>
-          <h3 class="title is-4 is-size-5-mobile">Peer-to-Peer</h3>
-          <ul>
-            <li class="is-size-6 is-size-6-mobile">Microsponsors is basically a bulletin board where Publishers &amp; Creators can transact with Sponsors &amp; Media Buyers directly.</li>
-            <li class="is-size-6 is-size-6-mobile">When a Creator chooses a winning Sponsor, trades happen wallet-to-wallet on the public Ethereum blockchain.</li>
-            <li class="is-size-6 is-size-6-mobile">Bidding is decentralized. Nobody can interfere in your auctions.</li>
-          </ul>
-        </div>
-
-        <div class="homepage-details__detail">
-          <div class="detail-icon detail-icon__transparent"></div>
-          <h3 class="title is-4 is-size-5-mobile">Transparent</h3>
-          <ul>
-            <li class="is-size-6 is-size-6-mobile">Transparent, verifiable auctions help Sponsors get the best ROI, and Creators &amp; Publishers get the right price.</li>
-            <li class="is-size-6 is-size-6-mobile">No hidden fees or deceptive pricing. Fees are clear as you use our Exchange and are detailed in the <a href="faq.html">FAQ</a>.</li>
-          </ul>
-        </div>
 
         <div class="homepage-details__detail">
           <div class="detail-icon detail-icon__fees"></div>
           <h3 class="title is-4 is-size-5-mobile">Low Fees</h3>
           <ul>
-            <li class="is-size-6 is-size-6-mobile">Creators &amp; Publishers: no fee for registration.</li>
-            <li class="is-size-6 is-size-6-mobile">Sponsors: no fee for bidding.</li>
+            <li class="is-size-6 is-size-6-mobile">Creators + Publishers: no fee for registration.</li>
+            <li class="is-size-6 is-size-6-mobile">Sponsors + Media Buyers: no fee for bidding.</li>
             <li class="is-size-6 is-size-6-mobile">When a bid is selected by the seller, Microsponsors charges a fee of 1.5% to each side.</li>
             <li class="is-size-6 is-size-6-mobile">Using Ethereum means lower fees. Especially for cross-border payments.</li>
           </ul>
@@ -158,8 +167,17 @@
           <h3 class="title is-4 is-size-5-mobile">Instant Payouts</h3>
           <ul>
             <li class="is-size-6 is-size-6-mobile">Instant transaction settlement. No waiting around!</li>
-           <li class="is-size-6 is-size-6-mobile">Participants are able to cash-out their earnings any time.</li>
+           <li class="is-size-6 is-size-6-mobile">Participants can cash-out their earnings any time.</li>
             <li class="is-size-6 is-size-6-mobile">Our Referral program will help you earn even more by bringing your friends along (start date TBD).</li>
+          </ul>
+        </div>
+
+        <div class="homepage-details__detail">
+          <div class="detail-icon detail-icon__transparent"></div>
+          <h3 class="title is-4 is-size-5-mobile">Transparent</h3>
+          <ul>
+            <li class="is-size-6 is-size-6-mobile">Transparent, verifiable auctions help Sponsors get the best ROI, and Creators + Publishers get the right price.</li>
+            <li class="is-size-6 is-size-6-mobile">No hidden fees or deceptive pricing. Fees are clear as you use our Exchange and are detailed in the <a href="faq.html">FAQ</a>.</li>
           </ul>
         </div>
 
@@ -167,9 +185,8 @@
           <div class="detail-icon detail-icon__fair"></div>
           <h3 class="title is-4 is-size-5-mobile">Fair Marketplace</h3>
           <ul>
-            <li class="is-size-6 is-size-6-mobile">Our mission is to deliver top-tier monetization solutions on a level playing field for businesses and individuals alike, no matter the size.</li>
             <li class="is-size-6 is-size-6-mobile">Microsponsors is a fair, neutral marketplace that helps eliminate waste, fraud and deceptive practices.</li>
-            <li class="is-size-6 is-size-6-mobile">Microsponsors will not compete against its own market's participants. Your business is yours.</li>
+            <li class="is-size-6 is-size-6-mobile">Our mission is to deliver top-tier monetization solutions on a level playing field for businesses and individuals alike, no matter the size.</li>
           </ul>
         </div>
 
@@ -177,7 +194,7 @@
           <div class="detail-icon detail-icon__tamper"></div>
           <h3 class="title is-4 is-size-5-mobile">Tamper-Proof</h3>
           <ul>
-            <li class="is-size-6 is-size-6-mobile">Publishers and Creators are digitally verified with a tamper-proof blockchain Registry.</li>
+            <li class="is-size-6 is-size-6-mobile">Publishers + Creators are digitally verified with a tamper-proof blockchain Registry.</li>
             <li class="is-size-6 is-size-6-mobile">Auction bids are secured with cryptographic signature tools.</li>
           </ul>
         </div>
@@ -278,9 +295,9 @@
         // Rotating words in Hero
         var $contentType = $('#ms-hero-content-type');
         var contentTypeArray = [
-          'website.',
-          'newsletter.',
-          'podcast.',
+          'websites.',
+          'newsletters.',
+          'podcasts.',
           'videos.',
         ];
         var counter = 0;
@@ -330,6 +347,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: homepage
-git sha: d7997347f18b39652e17d6456426a7020496476b
+git branch: master
+git sha: 0095f119b45d582d1bb51b0d3fbdec33d067d814
  -->
