--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.a9d15ce0a4.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.2073a45f73.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -163,6 +163,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: homepage
-git sha: d7997347f18b39652e17d6456426a7020496476b
+git branch: master
+git sha: 0095f119b45d582d1bb51b0d3fbdec33d067d814
  -->
