--- a/privacy.html
+++ b/privacy.html
@@ -121,5 +121,13 @@
 </html>
  <!-- VERSION
 git branch: master
+git sha: 6ee73c5be793f502ee11967721fc89b82650178b
+ -->
+ <!-- VERSION
+git branch: master
+git sha: 6ee73c5be793f502ee11967721fc89b82650178b
+ -->
+ <!-- VERSION
+git branch: master
 git sha: 0095f119b45d582d1bb51b0d3fbdec33d067d814
  -->
